{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 14,
  "lineage": "e247f459-0d46-ee9c-c597-e3cf220ac160",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "InstanciaUbuntu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:137068222182:instance/i-05b023ca7c5467dee",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05b023ca7c5467dee",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "AWSLLaves",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d8927c3d8c6d615c",
            "private_dns": "ip-10-0-4-144.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.144",
            "public_dns": "ec2-50-17-7-116.compute-1.amazonaws.com",
            "public_ip": "50.17.7.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d245d5ae42e51315",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08f6348bca9ff01a3",
            "tags": {
              "Name": "InstanciaUbuntu"
            },
            "tags_all": {
              "Name": "InstanciaUbuntu"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bf19a3ff5ce4ea56"
            ]
          },
          "dependencies": [
            "aws_key_pair.AWSLLaves",
            "aws_security_group.SG-VPC010",
            "aws_subnet.Sub_RedPub01",
            "aws_vpc.VPC010"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "InstanciaWindows",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0324a83b82023f0b3",
            "arn": "arn:aws:ec2:us-east-1:137068222182:instance/i-053a0db6cc4e65e4e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-053a0db6cc4e65e4e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "AWSLLaves",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-076871824c1f59ea6",
            "private_dns": "ip-10-0-27-83.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.27.83",
            "public_dns": "ec2-54-242-53-16.compute-1.amazonaws.com",
            "public_ip": "54.242.53.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-030030fbf9da48dc5",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c95648d13069c175",
            "tags": {
              "Name": "InstanciaWindows"
            },
            "tags_all": {
              "Name": "InstanciaWindows"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bf19a3ff5ce4ea56"
            ]
          },
          "dependencies": [
            "aws_key_pair.AWSLLaves",
            "aws_security_group.SG-VPC010",
            "aws_subnet.Sub_RedPub02",
            "aws_vpc.VPC010"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "InternetGateWay",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137068222182:internet-gateway/igw-02846dedec15bbdbb",
            "id": "igw-02846dedec15bbdbb",
            "owner_id": "137068222182",
            "tags": {
              "Name": "InternetGateWay"
            },
            "tags_all": {
              "Name": "InternetGateWay"
            },
            "vpc_id": "vpc-09fdc78ad1328d97d"
          },
          "dependencies": [
            "aws_vpc.VPC010"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "TablaRuteo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137068222182:route-table/rtb-0c44e9747e773863d",
            "id": "rtb-0c44e9747e773863d",
            "owner_id": "137068222182",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02846dedec15bbdbb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Tabla de Ruteo Predeterminada"
            },
            "tags_all": {
              "Name": "Tabla de Ruteo Predeterminada"
            },
            "timeouts": null,
            "vpc_id": "vpc-09fdc78ad1328d97d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.InternetGateWay",
            "aws_vpc.VPC010"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AsociacionTRSRPubA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0611a0ed50238d45b",
            "route_table_id": "rtb-0c44e9747e773863d",
            "subnet_id": "subnet-08f6348bca9ff01a3"
          },
          "dependencies": [
            "aws_internet_gateway.InternetGateWay",
            "aws_route_table.TablaRuteo",
            "aws_subnet.Sub_RedPub01",
            "aws_vpc.VPC010"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AsociacionTRSRPubB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f0f0307c4a0cc28",
            "route_table_id": "rtb-0c44e9747e773863d",
            "subnet_id": "subnet-0c95648d13069c175"
          },
          "dependencies": [
            "aws_internet_gateway.InternetGateWay",
            "aws_route_table.TablaRuteo",
            "aws_subnet.Sub_RedPub02",
            "aws_vpc.VPC010"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-VPC010",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137068222182:security-group/sg-0bf19a3ff5ce4ea56",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bf19a3ff5ce4ea56",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241027001129179300000001",
            "name_prefix": "terraform-",
            "owner_id": "137068222182",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Permitir_SSH_HTTP_RDP"
            },
            "tags_all": {
              "Name": "Permitir_SSH_HTTP_RDP"
            },
            "timeouts": null,
            "vpc_id": "vpc-09fdc78ad1328d97d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC010"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Sub_RedPriv01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137068222182:subnet/subnet-08fdfa6db1c7e1deb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08fdfa6db1c7e1deb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137068222182",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SubRedPrivada_01"
            },
            "tags_all": {
              "Name": "SubRedPrivada_01"
            },
            "vpc_id": "vpc-09fdc78ad1328d97d"
          },
          "dependencies": [
            "aws_vpc.VPC010"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Sub_RedPriv02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137068222182:subnet/subnet-0a1ccba037d61b433",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1ccba037d61b433",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137068222182",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SubRedPrivada_02"
            },
            "tags_all": {
              "Name": "SubRedPrivada_02"
            },
            "vpc_id": "vpc-09fdc78ad1328d97d"
          },
          "dependencies": [
            "aws_vpc.VPC010"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Sub_RedPub01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137068222182:subnet/subnet-08f6348bca9ff01a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f6348bca9ff01a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137068222182",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SubRedPublica_01"
            },
            "tags_all": {
              "Name": "SubRedPublica_01"
            },
            "vpc_id": "vpc-09fdc78ad1328d97d"
          },
          "dependencies": [
            "aws_vpc.VPC010"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Sub_RedPub02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137068222182:subnet/subnet-0c95648d13069c175",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c95648d13069c175",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137068222182",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SubRedPublica_02"
            },
            "tags_all": {
              "Name": "SubRedPublica_02"
            },
            "vpc_id": "vpc-09fdc78ad1328d97d"
          },
          "dependencies": [
            "aws_vpc.VPC010"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC010",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137068222182:vpc/vpc-09fdc78ad1328d97d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d4b45ac97aea1cc0",
            "default_route_table_id": "rtb-068856c268f81d468",
            "default_security_group_id": "sg-03be0862362a2d91a",
            "dhcp_options_id": "dopt-0ad2751624790f853",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09fdc78ad1328d97d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-068856c268f81d468",
            "owner_id": "137068222182",
            "tags": {
              "Name": "VPC-Actividad-10"
            },
            "tags_all": {
              "Name": "VPC-Actividad-10"
            }
          }
        }
      ]
    }
  ]
}